codex-rs/tui2/src/bottom_pane/snapshots/codex_tui2__bottom_pane__chat_composer__tests__footer_mode_shortcut_overlay.snap
---
source: tui2/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"› Ask xcodex to do anything                                                                         "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  / for commands                            ctrl + o for ⚡Tools                                    " Hidden by multi-width symbols: [(58, " ")]
"  ! for shell commands                      shift + enter for newline                               "
"  @ for file paths                          ctrl + v to paste images                                "
"  esc again to edit previous message        ctrl + c to exit                                        "
"                                            ctrl + t to view transcript                             "
